{
  "version": 4,
  "terraform_version": "1.0.11",
  "serial": 156,
  "lineage": "084f7e1e-5285-7c71-0eff-32c2353ce7d0",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09340184e335a968e",
            "association_id": "eipassoc-07e6123cb16817143",
            "domain": "vpc",
            "id": "eipalloc-09340184e335a968e",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-0cc81fd80dde5f880",
            "private_dns": "ip-172-16-35-163.ap-south-1.compute.internal",
            "private_ip": "172.16.35.163",
            "public_dns": "ec2-13-233-171-146.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.233.171.146",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "techsupport-nat-eip",
              "project": "techsupport"
            },
            "tags_all": {
              "Name": "techsupport-nat-eip",
              "project": "techsupport"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:811715053301:internet-gateway/igw-0dccec02b2ffda991",
            "id": "igw-0dccec02b2ffda991",
            "owner_id": "811715053301",
            "tags": {
              "Name": "techsupport-igw",
              "project": "techsupport"
            },
            "tags_all": {
              "Name": "techsupport-igw",
              "project": "techsupport"
            },
            "vpc_id": "vpc-0aa028dfe554f8052"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "t1-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:811715053301:targetgroup/t1-tg/b462287ebbb05a61",
            "arn_suffix": "targetgroup/t1-tg/b462287ebbb05a61",
            "connection_termination": false,
            "deregistration_delay": "60",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/index.html",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:811715053301:targetgroup/t1-tg/b462287ebbb05a61",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "t1-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 60,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0aa028dfe554f8052"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09340184e335a968e",
            "connectivity_type": "public",
            "id": "nat-04083da28acbd4d09",
            "network_interface_id": "eni-0cc81fd80dde5f880",
            "private_ip": "172.16.35.163",
            "public_ip": "13.233.171.146",
            "subnet_id": "subnet-0ee63aed96bd8cb98",
            "tags": {
              "Name": "techsupport-nat",
              "project": "techsupport"
            },
            "tags_all": {
              "Name": "techsupport-nat",
              "project": "techsupport"
            }
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_subnet.public2",
            "aws_vpc.vpc",
            "data.aws_availability_zones.az"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:811715053301:route-table/rtb-017faf6beb8ea82ad",
            "id": "rtb-017faf6beb8ea82ad",
            "owner_id": "811715053301",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-04083da28acbd4d09",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "techsupport-route-private",
              "project": "techsupport"
            },
            "tags_all": {
              "Name": "techsupport-route-private",
              "project": "techsupport"
            },
            "timeouts": null,
            "vpc_id": "vpc-0aa028dfe554f8052"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_nat_gateway.nat",
            "aws_subnet.public2",
            "aws_vpc.vpc",
            "data.aws_availability_zones.az",
            "aws_eip.eip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:811715053301:route-table/rtb-06ee4718042e529d2",
            "id": "rtb-06ee4718042e529d2",
            "owner_id": "811715053301",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0dccec02b2ffda991",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "techsupport-route-public",
              "project": "techsupport"
            },
            "tags_all": {
              "Name": "techsupport-route-public",
              "project": "techsupport"
            },
            "timeouts": null,
            "vpc_id": "vpc-0aa028dfe554f8052"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d42a16e968a181aa",
            "route_table_id": "rtb-017faf6beb8ea82ad",
            "subnet_id": "subnet-0794ac9ebe8c1a5ff"
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private1",
            "aws_subnet.public2",
            "aws_vpc.vpc",
            "data.aws_availability_zones.az"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00ee89b2c6ac76c27",
            "route_table_id": "rtb-017faf6beb8ea82ad",
            "subnet_id": "subnet-01f7eef25cacf0cfa"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.az",
            "aws_eip.eip",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private2",
            "aws_subnet.public2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01bf9dce4d104a190",
            "route_table_id": "rtb-017faf6beb8ea82ad",
            "subnet_id": "subnet-0ecdbd1736dc6fc0e"
          },
          "dependencies": [
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private3",
            "aws_subnet.public2",
            "aws_vpc.vpc",
            "data.aws_availability_zones.az",
            "aws_eip.eip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0007305c0d5f35e52",
            "route_table_id": "rtb-06ee4718042e529d2",
            "subnet_id": "subnet-07a39eac69b3da62d"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public1",
            "aws_vpc.vpc",
            "data.aws_availability_zones.az",
            "aws_internet_gateway.igw"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-021c50138e7d34543",
            "route_table_id": "rtb-06ee4718042e529d2",
            "subnet_id": "subnet-0ee63aed96bd8cb98"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public2",
            "aws_vpc.vpc",
            "data.aws_availability_zones.az"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a0976a5250cd21bd",
            "route_table_id": "rtb-06ee4718042e529d2",
            "subnet_id": "subnet-0acd69d6d0fd0d871"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.az",
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public3"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb-sec",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:811715053301:security-group/sg-0a8abb881d12323e8",
            "description": "allows 80 for inbound and all for outbound",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a8abb881d12323e8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "alb-sec",
            "name_prefix": "",
            "owner_id": "811715053301",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "alb-sec"
            },
            "tags_all": {
              "Name": "alb-sec"
            },
            "timeouts": null,
            "vpc_id": "vpc-0aa028dfe554f8052"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:811715053301:subnet/subnet-0794ac9ebe8c1a5ff",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "172.16.96.0/19",
            "id": "subnet-0794ac9ebe8c1a5ff",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "811715053301",
            "tags": {
              "Name": "techsupport-private1",
              "project": "techsupport"
            },
            "tags_all": {
              "Name": "techsupport-private1",
              "project": "techsupport"
            },
            "vpc_id": "vpc-0aa028dfe554f8052"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.az"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:811715053301:subnet/subnet-01f7eef25cacf0cfa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "172.16.128.0/19",
            "id": "subnet-01f7eef25cacf0cfa",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "811715053301",
            "tags": {
              "Name": "techsupport-private2",
              "project": "techsupport"
            },
            "tags_all": {
              "Name": "techsupport-private2",
              "project": "techsupport"
            },
            "vpc_id": "vpc-0aa028dfe554f8052"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.az"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:811715053301:subnet/subnet-0ecdbd1736dc6fc0e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "172.16.160.0/19",
            "id": "subnet-0ecdbd1736dc6fc0e",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "811715053301",
            "tags": {
              "Name": "techsupport-private3",
              "project": "techsupport"
            },
            "tags_all": {
              "Name": "techsupport-private3",
              "project": "techsupport"
            },
            "vpc_id": "vpc-0aa028dfe554f8052"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.az"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:811715053301:subnet/subnet-07a39eac69b3da62d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "172.16.0.0/19",
            "id": "subnet-07a39eac69b3da62d",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "811715053301",
            "tags": {
              "Name": "techsupport-public1",
              "project": "techsupport"
            },
            "tags_all": {
              "Name": "techsupport-public1",
              "project": "techsupport"
            },
            "vpc_id": "vpc-0aa028dfe554f8052"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.az"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:811715053301:subnet/subnet-0ee63aed96bd8cb98",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "172.16.32.0/19",
            "id": "subnet-0ee63aed96bd8cb98",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "811715053301",
            "tags": {
              "Name": "techsupport-public2",
              "project": "techsupport"
            },
            "tags_all": {
              "Name": "techsupport-public2",
              "project": "techsupport"
            },
            "vpc_id": "vpc-0aa028dfe554f8052"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.az"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:811715053301:subnet/subnet-0acd69d6d0fd0d871",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "172.16.64.0/19",
            "id": "subnet-0acd69d6d0fd0d871",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "811715053301",
            "tags": {
              "Name": "techsupport-public3",
              "project": "techsupport"
            },
            "tags_all": {
              "Name": "techsupport-public3",
              "project": "techsupport"
            },
            "vpc_id": "vpc-0aa028dfe554f8052"
          },
          "dependencies": [
            "data.aws_availability_zones.az",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:811715053301:vpc/vpc-0aa028dfe554f8052",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.0.0/16",
            "default_network_acl_id": "acl-0ae26b34e470016d1",
            "default_route_table_id": "rtb-00d41a7d08d138c61",
            "default_security_group_id": "sg-0c0e42cf4e223f384",
            "dhcp_options_id": "dopt-080773415f55000ed",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0aa028dfe554f8052",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-00d41a7d08d138c61",
            "owner_id": "811715053301",
            "tags": {
              "Name": "techsupport-vpc",
              "project": "techsupport"
            },
            "tags_all": {
              "Name": "techsupport-vpc",
              "project": "techsupport"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}